# AutoBuilder

./: .gitignore  README.md  _attempt_status.json  pyproject.toml
.github/workflows/: ci.yml
autobuilder/: _runner.jl  _runner.py  attempt_recorder.py  attempts.py  build.py  cli.py  codegen.py  comparator.py  grader.py  hint_image.py  inputs.py  julia_adapter.py  notebook_convert.py  plot_check.py  python_adapter.py  reference.py  student_dispatch.py
autobuilder/examples/callable_test/: rubric.json  submission_01_correct.py  submission_02_wrong.py  test_inputs.py
autobuilder/examples/dataframe_test/: rubric.json  solution.py  submission_01_correct.py  submission_02_wrong_columns.py  submission_03_wrong_threshold.py
autobuilder/examples/expected_test/: rubric.json  solution.py  submission_01_misisng_var.py  submission_02_incorrect.py  submission_03_correct.py
autobuilder/examples/food_truck/: rubric.json
autobuilder/examples/function_unit_test/: submission_02_wrong_shape.py  submission_03_Euler.py  submission_05_correct.ipynb
autobuilder/examples/hw6/: edge_case_submission.py  rubric.json  solution.py  submission_01_broken_syntax_error.py  test_suite_values.dump
autobuilder/examples/julia/: rubric.json  solution.jl  submission_02_tolerance.jl  submission_03_wrong_type_and_size.jl  submission_05_nans_and_wrong_plot_labels.jl
autobuilder/examples/julia_full_test/: rubric.json  solution.jl  (+3 more)
autobuilder/templates/: _runner.jl  prepare_submission.py  run_autograder  run_grader.py  run_tests.py  setup.sh  setup_julia_block.sh
tests/: test_examples.py
(+33 files in other folders)
