[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autobuilder"
version = "0.6.5"
description = "Build Gradescope PyUnit autograder zips from a rubric + solution script."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "gradescope-utils",
]

[project.optional-dependencies]
test = ["pytest", "pandas"]

[project.scripts]
autobuilder = "autobuilder.cli:main"

[tool.setuptools.packages.find]
include = ["autobuilder*"]

[tool.setuptools.package-data]
autobuilder = ["templates/*", "_runner.jl"]
